tests/sem/error/struct_selfref.c
struct aa{
	struct aa bb;
};
